<?xml version="1.0"?>
<!-- For information about cmake projects in catkin workspaces see http://www.ros.org/reps/rep-0136.html -->
<package>
  <name>ceres_solver</name>
  <version>1.0.0</version>
  <description>Google Ceres Solver</description>

  <maintainer email="martin.sven.oehler@gmail.com">Martin Oehler</maintainer>

  <license>BSD</license>

  <!-- <url type="website">http://wiki.ros.org/lidar_calibration</url> -->

  <!--<author email="martin.sven.oehler@gmail.com">Martin Oehler</author>-->


   <buildtool_depend>cmake</buildtool_depend>
  <run_depend>catkin</run_depend>

  <export>
    <build_type>cmake</build_type>
  </export>
</package>
